fix span for error not aligning

--- a/src/style.css
+++ b/src/style.css
@@ -119,9 +119,10 @@ body {
 	}
 		form > span {
 			display: none;
+			align-self: flex-start;
 		}
 		input, select {
-			color: gray;
+			color: black;
 			border: none;
 			background-color: #EFEFEF;
 			width: 70%;
@@ -146,7 +147,7 @@ body {
 			display: block;
 			position: relative;
 			top: -6px;
-			right: 80px;
+			right: -58px;
 			font-size: 11px;
 			color: green;
 		}
@@ -161,12 +162,13 @@ body {
 			display: block;
 			position: relative;
 			top: -6px;
-			right: 53px;
+			right: -58px;
 			font-size: 11px;
 			color: red;
 		}
 
 		select {
+			color: gray;
 			width: 80.1%;
 		}
 		#submitButton {
